Fix horizontal scrolling on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,8 @@
-html {
-    height: 100%;
-}
-
 body {
     font-family: Mulish, sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    height: 100vh;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .social-icon {
