--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: Mulish, sans-serif;
+    height: 100vh;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .social-icon {
